examples/invalid_syntax/commands/input.as
; Two operands
mov r2, r2, r2 ; Too much operands
mov r1 ; missing operands
mov A, ; Invalid syntax
mov ; no params
mov r4 r3 ; Missing comma
mov r2, #3 ; invalid types target

; One operand
not r3, A ; To much operands
not ; Missing operands
not #3 ; Invalid des
not r3 sdadas ; Spam letters

; Zero operands
stop r1 ; Too much operands

; Invalid command
invalid